# mcp-trade-position-mgmnt

./: .env.example  .gitignore  CLAUDE_DESKTOP_GUIDE.md  Makefile  README.md  TEST_SUMMARY.md  claude_desktop_config.json  claude_desktop_config_template.json  docker-compose.yml  install_config.sh  mcp_server.py  pyproject.toml  pytest.ini  start_mcp.sh
data/: README.md
deployment/: Dockerfile  docker-compose.yml
notebooks/: data_exploration.ipynb  model_development.ipynb  promotion_analysis.ipynb
scripts/: download_data.py  process_data.py  train_models.py
src/: main.py
src/api/: analytics.py  predictions.py  promotions.py
src/mcp/: prompts.py  resources.py  tools.py
src/models/: database.py  entities.py  schemas.py
src/services/: base_processor.py  campaign_optimizer.py  data_processor.py  ml_predictor.py  model_manager.py  promotion_analytics.py
tests/: __init__.py  conftest.py  test_api_endpoints.py  test_basic_functionality.py  test_data_processor.py  test_integration.py  test_mcp_tools.py  test_models.py
